# yt_ai_story

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CLEANUP_SUMMARY.md  Makefile  README.md  REPO_AUDIT_2025.md  config.py  image_generator.py  logging_config.py  pyproject.toml  requirements.txt  requirements_backend.txt  run_full_pipeline.py  run_story.py  story_generator.py  video_composer.py  voice_generator.py
app/: __init__.py  main.py
app/api/: routes_story.py
app/core/: config.py  logging_config.py
app/models/: __init__.py  schemas.py
app/pipelines/: __init__.py  run_full_pipeline.py
app/services/: analytics_service.py  character_engine.py  character_video_engine.py  checkpoint_manager.py  dialogue_engine.py  hf_endpoint_client.py  image_quality_validator.py  lipsync_provider.py  llm_client.py  story_finder.py  (+13 more)
docs/: CHARACTER_TALKING_CLIPS_FEATURE.md  CINEMATIC_BROLL_UPGRADE.md  COMPREHENSIVE_AUDIT_2025.md  CONTENT_QUALITY_NOTES.md  EDIT_PATTERNS.md  ENHANCED_CONTENT_QUALITY.md  GO_LIVE_UPGRADE_SUMMARY.md  IMAGE_POST_PROCESSING.md  IMAGE_QUALITY_VALIDATION.md  LIPSYNC_IMPLEMENTATION.md  LIPSYNC_INTEGRATION.md  PARALLELISM_IMPLEMENTATION.md  PHOTOREALISTIC_CHARACTER_IMAGES.md  PIPELINE_AUDIT_2025.md  PRIORITY1_IMPLEMENTATION.md  PROJECT_AUDIT.md  QUALITY_SCORING.md  STORY_QUALITY_IMPROVEMENTS.md  THUMBNAIL_GENERATION.md  TODAY_COMPLETION_SUMMARY.md  TODAY_FEATURES_SUMMARY.md  TODAY_IMPLEMENTATION_PLAN.md  VIDEO_RENDERER_REFACTOR_SUMMARY.md  VISUAL_QUALITY_IMPROVEMENTS.md  WORKFLOW_AUDIT.md  YOUTUBE_SCHEDULING_ENHANCEMENT.md  backend.md  pipeline.md  quality_audit.md  quickstart.md  scheduling_support.md  story_sourcing.md  structure.md
scripts/: README.md  quality_dashboard.py  test_all_features.py  test_character_consistency.py  test_hf_image.py  test_lipsync.py
tests/: __init__.py  conftest.py
utils/: __init__.py  io_utils.py  text_utils.py
(+28 files in other folders)
